# MetaGraphEngine

./: .gitignore  CMakeLists.txt  QtGraphEngineKit.sln  QtGraphEngineKit.vcxproj  QtGraphEngineKit.vcxproj.filters  README.md
cpps/: CoroutineExecutor.cpp  DataBaseManager.cpp  FilmNaming.cpp  FilmStorage.cpp  FrameGenerateIntervalManager.cpp  FrameIDManager.cpp  FrameStructure.cpp  GLBuffers.cpp  GLCamera.cpp  GLContext.cpp  GLMesh.cpp  GLModel.cpp  GLScreen.cpp  GLShader.cpp  GLShaders.cpp  GLTexture.cpp  GraphAgency.cpp  GraphGenerateAlgorithmLib.cpp  GraphModelLoader.cpp  Hall.cpp  Law.cpp  MetaGraphAutomata.cpp  ModelDataConvertHelper.cpp  PhotoGrapher.cpp  PixelSpace.cpp  PixelType.cpp  RenderAlgorithmFactory.cpp  RenderCU.cpp  RenderKernel.cpp  ThreadSafeGraphCoHandlerCache.cpp  XmlDataModel.cpp  glad.c  main.cpp
headers/: CoModelGenerator.h  CoroutineExecutor.h  DataBaseManager.h  FilmNaming.h  FilmStorage.h  FrameGenerateIntervalManager.h  FrameIDManager.h  FrameStructure.h  GLBuffers.h  GLCamera.h  GLContext.h  GLMesh.h  GLModel.h  GLScreen.h  GLShader.h  GLShaders.h  GLTexture.h  GraphAgency.h  GraphGenerateAlgorithmLib.h  GraphModelLoader.h  Hall.h  ICoroutineManager.h  IFilmStorage.h  IGraphCoHandlerCache.h  IModelDataConverter.h  IModelLoader.h  IPhotoGrapher.h  IRenderAlgorithm.h  ImageLoader.h  IndexBarModel.h  Law.h  MetaGraphAutomata.h  ModelDataConvertHelper.h  PhotoGrapher.h  PixelSpace.h  PixelType.h  RenderAlgorithmFactory.h  RenderCU.h  RenderKernel.h  ThreadSafeGraphCoHandlerCache.h  (+1 more)
headers/assimp/: revision.h
headers/glad/: glad.h
libs/: ShabbyDataBase.lib  ShabbyEventQueue.lib  ShabbyRedis.lib  ShabbyThreadPool.lib  glfw3.lib
qt_vsd/: FelgoVSQmlTools.vsix
resources/: img.qrc  qml.qrc  xml.qrc
resources/qmls/: DynamicTabBar.qml  MainPage.qml
resources/qmls/designer/: AutomataInventory.qml  DrawBoard.qml  IndexBar.qml  MetaGraphDesigner.qml  PreviewBoard.qml  SearchBar.qml
resources/qmls/engine/: ButtonToolList.qml  EngineDesigner.qml  FilmSelector.qml  GraphList.qml  WindowSettings.qml
resources/qmls/frame/: DynamicTabBar.qml  IndexBar.qml  PreviewBoard.qml  SearchBar.qml
resources/xmls/componentsConfig/: model_index.xml  tab_pages.xml
resources/xmls/graphAutomata/: DiagSegment.xml  DiagSegment_Autogen.xml  bezier_automata.xml  circle_automata.xml  ellipse_automata.xml  point_automata.xml  segment_automata.xml  triangle_automata.xml
shaders_codes/fragment/: ExperienceColor.fs  PureGreen.fs
shaders_codes/vertex/: vetex_with_color.vs
sqls/: Automata.sql  FilePath.sql  ModelBluePrint.sql  TruncateAll.sql
